syntax = "proto3";

package ocf.cloud.auth.pb;

option go_package = "github.com/go-ocf/cloud/authorization/pb;pb";

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.account.raml#L27
message SignUpRequest {
    string device_id = 1;
    string authorization_code = 2;
    string authorization_provider = 3;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.account.raml#L40
message SignUpResponse {
    string access_token = 1;
    string user_id = 2;
    string refresh_token = 3;
    int64 expires_in = 4;
    string redirect_uri = 5;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.account.raml#L55
message SignOffRequest {
    string device_id = 1;
    string user_id = 2;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.account.raml#L60
message SignOffResponse {
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.session.raml#L27
message SignInRequest {
    string device_id = 1;
    string user_id = 2;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.session.raml#L39
message SignInResponse {
    int64 expires_in = 1;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.session.raml #Specification CR needed
message SignOutRequest {
    string device_id = 1;
    string user_id = 2;
    string correlation_id = 4;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.session.raml #Specification CR needed
message SignOutResponse {
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.tokenrefresh.raml#L27
message RefreshTokenRequest {
    string device_id = 1;
    string user_id = 2;
    string refresh_token = 3;
}

// https://github.com/openconnectivityfoundation/security/blob/master/oic.r.tokenrefresh.raml#L40
message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
}

message GetUserDevicesRequest {
    repeated string user_ids_filter = 1;
    repeated string device_ids_filter = 2;
}

message UserDevice {
    string device_id = 1;
    string user_id = 2;
}


message AddDeviceRequest {
    string device_id = 1;
    string user_id = 2;
}

message AddDeviceResponse {
}


message RemoveDeviceRequest {
    string device_id = 1;
    string user_id = 2;
}

message RemoveDeviceResponse {
}
